# onda

./: .clang-format  .gitignore  LEARN_BY_EXAMPLES.md  Makefile  README.md  TODO.md
bootstrap/: vm.onda
examples/: benchmark_1.onda  benchmark_1.onda.obc  benchmark_2.onda  control_flow.onda  count_down.onda  fibonacci.onda  file_io_basics.onda  file_test.onda  hello_world.onda  if_statement_example.onda  import_cycle_a.onda  import_cycle_b.onda  import_cycle_self.onda  imports_main.onda  imports_math.onda  labels_and_jump_dispatch.onda  locals_and_main.onda  macros_basics.onda  memory.onda  memory_2.onda  memory_basics.onda  operators_and_comments.onda  run_fibonacci.onda  run_fibonacci.onda.obc  stack_basics.onda  sudoku.onda  sudoku.txt  sudoku_solver.onda  todo.onda  words.onda  words2.onda  words_and_args.onda  words_with_args.onda  words_with_args_2.onda
onda-lsp/: README.md  pyproject.toml
onda-lsp/onda_lsp/: __init__.py  __main__.py  analyzer.py  documents.py  keywords.py  protocol.py  server.py  types.py
onda-lsp/tests/: test_analyzer.py  test_server_smoke.py
src/: main.c  onda_comp_aarch64.c  onda_comp_aarch64.h  onda_compiler.c  onda_compiler.h  onda_config.h  onda_dict.c  onda_dict.h  onda_env.c  onda_env.h  onda_jit.c  onda_jit.h  onda_jit_aarch64.c  onda_jit_aarch64.h  onda_jit_x86_64.c  onda_jit_x86_64.h  onda_optimizer.c  onda_optimizer.h  onda_parser.c  onda_parser.h  onda_runtime.h  onda_std.c  onda_std.h  onda_util.c  onda_util.h  onda_vm.c  onda_vm.h
tests/: tests.c
vim/ftdetect/: onda.vim
vim/syntax/: onda.vim
