[project]
name = "onda-lsp"
version = "0.1.0"
description = "Basic Python-only Language Server for Onda"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Onda contributors" }]
dependencies = []

[project.scripts]
onda-lsp = "onda_lsp.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
